--- a/gastrobot/usuarios/templates/usuarios/login.html
+++ b/gastrobot/usuarios/templates/usuarios/login.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8 bg-gray-50 dark:bg-gray-900">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-10 w-auto" src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Tu App">
+    <img class="mx-auto h-10 w-auto" src="{% static 'img/favicon.ico' %}" alt="Tu App">
     <h2 class="mt-10 text-center text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
       Inicia sesión en tu cuenta
     </h2>
