Actualizar vista de editar receta

--- a/gastrobot/core/templates/base.html
+++ b/gastrobot/core/templates/base.html
@@ -65,6 +65,9 @@
           {% block content %}{% endblock %}
         </div>
       </main>
+   
+      <!-- Bloque para scripts extra -->
+      {% block extra_js %}{% endblock %}
     </div>
   </body>
 </html>
